--- a/index.html
+++ b/index.html
@@ -1,21 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Caio Ramalho</title>
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Caio Ramalho</title>
+  <link rel="stylesheet" href="css/estilos.css">
+  </head>
 <body>
-    <header>
-        <nav class="menu">
-          <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
-          </ul>
-        </nav>
-        <h1 class="site-title">Caio Ramalho</h1>
-        <h2 class="site-subtitle">Em Desenvolvimento</h2>
-      </header>
+  <header>
+    <nav class="menu">
+      <ul>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Portfólio</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+    <div>
+      <h1 class="site-title">Caio Ramalho</h1>
+      <h2 class="site-subtitle">Em Desenvolvimento</h2>
+    </div>
+  </header>
+    <section>
+    <h2 class="Portfólio"> Portfólio</h2>
+    <div class="imagens1">
+      <figure>
+        <img class="img-portfolio" src="./img/Linkedin.jpg" alt="Linkedin">
+        <figcaption>Linkedin</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/Git.png" alt=">GitHub">
+        <figcaption>GitHub</figcaption>
+      </figure>
+      <figure>
+    </div>
+  </section>
+</header>
+  <section>
+    <h2 class="Contatos"> Contatos</h2>
+    <div class="imagens2">
+      <figure>
+        <img class="img-portfolio" src="./img/Instagram.jpg" alt="Instagram">
+        <figcaption>Instagram</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src=".//img/Facebook.png" alt="Facebook">
+        <figcaption>Facebook</figcaption>
+      </figure>
+    </div>
+  </section>
 </body>
-</html> 
+</html>
