--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2 class="Portfólio"> Portfólio</h2>
     <div class="imagens1">
       <figure>
-        <img class="img-portfolio" src="./img/Linkedin.jpg" alt="Linkedin">
+        <img class="img-portfolio" src="./img/Linkedin.png" alt="Linkedin">
         <figcaption>Linkedin</figcaption>
       </figure>
       <figure>
@@ -37,7 +37,7 @@
     <h2 class="Contatos"> Contatos</h2>
     <div class="imagens2">
       <figure>
-        <img class="img-portfolio" src="./img/Instagram.jpg" alt="Instagram">
+        <img class="img-portfolio" src="./img/Instagram.png" alt="Instagram">
         <figcaption>Instagram</figcaption>
       </figure>
       <figure>
