--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <h2 class="Portfólio"> Portfólio</h2>
     <div class="imagens1">
       <figure>
-        <img class="img-portfolio" src="./img/Linkedin.png" alt="Linkedin">
-        <figcaption>Linkedin</figcaption>
+        <img class="img-portfolio" src="./img/LinkedIn.png" alt="LinkedIn">
+        <figcaption>LinkedIn</figcaption>
       </figure>
       <figure>
         <img class="img-portfolio" src="./img/Git.png" alt=">GitHub">
