--- a/index.html
+++ b/index.html
@@ -1,49 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Caio Ramalho</title>
   <link rel="stylesheet" href="css/estilos.css">
-  </head>
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Press+Start+2P&family=Source+Code+Pro&display=swap"
+	rel="stylesheet">
+</head>
 <body>
   <header>
-    <nav class="menu">
-      <ul>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Portfólio</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
-    <div>
-      <h1 class="site-title">Caio Ramalho</h1>
-      <h2 class="site-subtitle">Em Desenvolvimento</h2>
-    </div>
+		<nav class="menu">
+			<ul>
+				<li><a href="#Sobre">Sobre</a></li>
+				<li><a href="#">Projetos</a></li>
+				<li><a href="#">Contato</a></li>
+			</ul>
+		</nav>
+		<div>
+			<h1 class="site-title">Caio Ramalho</h1>
+			<h2 class="site-subtitle">Em Desenvolvimento</h2>
+		</div>
   </header>
-    <section>
-    <h2 class="Portfólio"> Portfólio</h2>
-    <div class="imagens1">
-      <figure>
-        <img class="img-portfolio" src="./img/LinkedIn.png" alt="LinkedIn">
-        <figcaption>LinkedIn</figcaption>
-      </figure>
-      <figure>
+  <section class="Sobre">
+		<h2>Sobre</h2>
+			<figure>
+				<img class="img-Sobre" src="./img/Sobre.jpg" alt="Sobre">
+			</figure>	
+			<p>Olá Sou o Caio Ramalho estudante do Imersão Hipster CSS</p>
+		</div>		
+	</section>
+  <section class="portfolio">
+		<h2>Contatos</h2>
+		<div class="grid">
+			<figure>
+				<img class="img-portfolio" src="./img/LinkedIn.png" alt="LinkedIn">
+				<figcaption>LinkedIn</figcaption>
+			</figure>
+			<figure>
         <img class="img-portfolio" src="./img/Git.png" alt=">GitHub">
-        <figcaption>GitHub</figcaption>
-      </figure>
-    </div>
-  </section>
-</header>
-  <section>
-    <h2 class="Contatos"> Contatos</h2>
-    <div class="imagens2">
-      <figure>
-        <img class="img-portfolio" src="./img/Instagram.png" alt="Instagram">
-        <figcaption>Instagram</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src=".//img/Facebook.png" alt="Facebook">
-        <figcaption>Facebook</figcaption>
-      </figure>
-    </div>
-  </section>
+				<figcaption>GitHub</figcaption>
+			</figure>
+			<figure>
+				<img class="img-portfolio" src="./img/Facebook.png" alt="Facebook">
+				<figcaption>Facebook</figcaption>
+			</figure>
+			<figure>
+				<img class="img-portfolio" src="./img/Instagram.png" alt="Instagram">
+				<figcaption>Instagram</figcaption>
+			</figure>
+		</div>		
+	</section>
 </body>
 </html>
