--- a/index.html
+++ b/index.html
@@ -7,49 +7,48 @@
   <link rel="stylesheet" href="css/estilos.css">
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Press+Start+2P&family=Source+Code+Pro&display=swap"
 	rel="stylesheet">
+	<script src="https://kit.fontawesome.com/2f88c6fb7f.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
 		<nav class="menu">
 			<ul>
 				<li><a href="#Sobre">Sobre</a></li>
-				<li><a href="#">Projetos</a></li>
-				<li><a href="#">Contato</a></li>
+				<li><a href="#Contatos">Contato</a></li>				
 			</ul>
 		</nav>
-		<div>
+		<div class="titulo">
 			<h1 class="site-title">Caio Ramalho</h1>
-			<h2 class="site-subtitle">Em Desenvolvimento</h2>
+			<h2 class="site-subtitle">Seja bem vindo ao meu Website</h2>
 		</div>
   </header>
-  <section class="Sobre">
+  <section class="Sobre" id="Sobre">
 		<h2>Sobre</h2>
-			<figure>
-				<img class="img-Sobre" src="./img/Sobre.jpg" alt="Sobre">
-			</figure>	
-			<p>Olá Sou o Caio Ramalho estudante do Imersão Hipster CSS</p>
-		</div>		
+			<div class="div1">
+				<figure>
+					<img class="img-Sobre" src="./img/Sobre.jpg" alt="Sobre">
+				</figure>
+			</div>
+				<div class="div2">
+					<p>Olá Sou o Caio Ramalho estudante do Imersão Hipster CSS</p>
+				</div>		
 	</section>
-  <section class="portfolio">
+	<section class="Contatos" id="Contatos">
 		<h2>Contatos</h2>
-		<div class="grid">
-			<figure>
-				<img class="img-portfolio" src="./img/LinkedIn.png" alt="LinkedIn">
-				<figcaption>LinkedIn</figcaption>
-			</figure>
-			<figure>
-        <img class="img-portfolio" src="./img/Git.png" alt=">GitHub">
-				<figcaption>GitHub</figcaption>
-			</figure>
-			<figure>
-				<img class="img-portfolio" src="./img/Facebook.png" alt="Facebook">
-				<figcaption>Facebook</figcaption>
-			</figure>
-			<figure>
-				<img class="img-portfolio" src="./img/Instagram.png" alt="Instagram">
-				<figcaption>Instagram</figcaption>
-			</figure>
-		</div>		
-	</section>
-</body>
-</html>
+		<div class="grid icons">
+				<a target="_blank" href="https://linkedin.com/in/caioramalho">
+					<i class="fab fa-linkedin"></i>
+				</a>			
+				<a target="_blank" href="https://github.com/caioramalho">
+					<i class="fab fa-github-square"></i>
+				</a>			
+				<a target="_blank" href="https://www.facebook.com/caioramalho">
+					<i class="fab fa-facebook-square"></i>
+				</a>			
+				<a target="_blank" href="https://instagram.com/caiomsramalho">
+					<i class="fab fa-instagram-square"></i>
+				</a>
+			</div>
+		</section>
+	</body>
+	</html>
